[gd_scene load_steps=20 format=3 uid="uid://b4mrqfvtlycnc"]

[ext_resource type="Script" path="res://UserInterface/UserInterface.gd" id="1_pjpe8"]
[ext_resource type="PackedScene" uid="uid://dss65i31egqc3" path="res://Levels/infinite_gallery.tscn" id="2_60fvu"]
[ext_resource type="Theme" uid="uid://bq6qbvmwxf5gm" path="res://UserInterface/UITheme.tres" id="2_rwlv8"]
[ext_resource type="Script" path="res://UserInterface/Reticle.gd" id="3_hfmys"]
[ext_resource type="Shader" uid="uid://wn6mnfchf1w7" path="res://UserInterface/ScreenSpaceBlur.tres" id="4_kynqp"]
[ext_resource type="Script" path="res://UserInterface/PauseScreen.gd" id="5_ka560"]
[ext_resource type="PackedScene" uid="uid://sbl4rscivr8g" path="res://UserInterface/SettingsContainer.tscn" id="5_qrem4"]
[ext_resource type="PackedScene" uid="uid://dkh1asxc7gtkx" path="res://UserInterface/MainMenuContainer.tscn" id="6_6k6vc"]
[ext_resource type="PackedScene" uid="uid://clcrin3hg2tg5" path="res://UserInterface/JoinGameContainer.tscn" id="8_ftfw4"]
[ext_resource type="PackedScene" uid="uid://cclmpn4711vm7" path="res://UserInterface/LayoutConfigContainer.tscn" id="9_4l50m"]
[ext_resource type="PackedScene" uid="uid://8neac3ncfh86" path="res://UserInterface/teleport_dialog.tscn" id="11_s0xt5"]

[sub_resource type="GDScript" id="GDScript_ivi4s"]
script/source = "extends MarginContainer

func _unhandled_input(event: InputEvent) -> void:
	if event.is_action_pressed(\"interact\"):
		visible = false
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4yve"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_8msa4"]
font_size = 42
font_color = Color(0.803922, 0.803922, 0.803922, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1tj06"]
font_size = 24
font_color = Color(0.454902, 0.423529, 0.380392, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6vwxw"]
shader = ExtResource("4_kynqp")
shader_parameter/BlurAmount = 1.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dk3bb"]

[sub_resource type="InputEventAction" id="InputEventAction_gbevd"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_rg3uj"]
events = [SubResource("InputEventAction_gbevd")]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_pjpe8")
start_level = ExtResource("2_60fvu")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_rwlv8")

[node name="ReticleContainer" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Reticle" type="TextureRect" parent="HUD/ReticleContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
stretch_mode = 5
script = ExtResource("3_hfmys")

[node name="Hints" type="MarginContainer" parent="HUD"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = SubResource("GDScript_ivi4s")

[node name="PanelContainer" type="PanelContainer" parent="HUD/Hints"]
custom_minimum_size = Vector2(288, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_t4yve")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Hints/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Hints/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HUD/Hints/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Controls"
label_settings = SubResource("LabelSettings_8msa4")

[node name="CloseLabel" type="Label" parent="HUD/Hints/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "f close"
label_settings = SubResource("LabelSettings_1tj06")
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="HUD/Hints/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Hints/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.803922, 0.803922, 0.803922, 1)
bbcode_enabled = true
text = "[color=bd2424]WASD[/color][color=746c61]:[/color] move
[color=cc612c]Mouse[/color][color=746c61]:[/color] look
[color=30aa36]tab[/color][color=746c61]:[/color] inspect mode
[color=608dd0]T[/color][color=746c61]:[/color] teleport
[color=9052a1]esc[/color][color=746c61]:[/color] menu"
fit_content = true

[node name="InspectModeHints" type="MarginContainer" parent="HUD"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PanelContainer" type="PanelContainer" parent="HUD/InspectModeHints"]
custom_minimum_size = Vector2(325, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_t4yve")

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/InspectModeHints/PanelContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.803922, 0.803922, 0.803922, 1)
bbcode_enabled = true
text = "[color=ebbb4f]Left click[/color][color=746c61]:[/color] move art
[color=608dd0]Right click[/color][color=746c61]:[/color] learn more
[color=30aa36]tab[/color][color=746c61]:[/color] exit inspect mode"
fit_content = true

[node name="ConnectionStatusContainer" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/ConnectionStatusContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -40.5
offset_right = 1919.5
offset_bottom = 1039.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConnectionStatusLabel" type="Label" parent="HUD/ConnectionStatusContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseScreen" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rwlv8")
script = ExtResource("5_ka560")

[node name="BackgroundBlur" type="TextureRect" parent="PauseScreen"]
material = SubResource("ShaderMaterial_6vwxw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_dk3bb")

[node name="PauseContainer" type="CenterContainer" parent="PauseScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/PauseContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Pause"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
layout_mode = 2
shortcut_context = NodePath("../..")
shortcut = SubResource("Shortcut_rg3uj")
shortcut_in_tooltip = false
text = "resume"

[node name="SettingsButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="LayoutConfigButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New temporary exhibition..."

[node name="HBoxContainer" type="HBoxContainer" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2

[node name="ImportButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Import..."

[node name="ExportButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Export..."

[node name="QuitButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="MainMenuContainer" parent="PauseScreen" instance=ExtResource("6_6k6vc")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SettingsContainer" parent="PauseScreen" instance=ExtResource("5_qrem4")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="JoinGameContainer" parent="PauseScreen" instance=ExtResource("8_ftfw4")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LayoutConfigContainer" parent="PauseScreen" instance=ExtResource("9_4l50m")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="VersionLabel" type="Label" parent="PauseScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "0.0.0"
horizontal_alignment = 2

[node name="ColorRectFader" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ErrorDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
process_mode = 3
title = "Fatal error"
initial_position = 1

[node name="ImportDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
process_mode = 3
title = "Import permanent collection (replacing current one)"
size = Vector2i(1024, 768)
always_on_top = true
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.gallery.json")

[node name="ExportDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
process_mode = 3
title = "Export permanent collection"
size = Vector2i(1024, 768)
ok_button_text = "Export"
access = 2
filters = PackedStringArray("*.gallery.json")

[node name="TeleportDialog" parent="." instance=ExtResource("11_s0xt5")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/LayoutConfigButton" to="." method="_on_new_gallery_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/HBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/HBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="exit" from="PauseScreen/SettingsContainer" to="." method="_on_settings_container_exit"]
[connection signal="file_selected" from="ImportDialog" to="." method="_on_import_dialog_file_selected"]
[connection signal="file_selected" from="ExportDialog" to="." method="_on_export_dialog_file_selected"]
[connection signal="close_requested" from="TeleportDialog" to="." method="_on_teleport_dialog_close_requested"]
